force-app/main/default/objects/Account_Plan_Objective__c/Account_Plan_Objective__c.object-meta.xml
<CustomObject>
    <description>Object created to store the objectives of an Account Plan.</description>
    <label>Doelstelling</label>
    <nameField>
        <displayFormat>OBJ-{0}</displayFormat>
        <label>Objective Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doelstellingen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>