force-app/main/default/objects/Account_Plan_Objective__c/fields/AccountPlanRef__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanRef__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>