force-app/main/default/objects/Account_Plan_Objective__c/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <label>Approach</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>