force-app/main/default/objects/Account_Plan_Objective__c/fields/ManagerReviewComments__c.field-meta.xml
<CustomField>
    <fullName>ManagerReviewComments__c</fullName>
    <label>Manager Review Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>