force-app/main/default/objects/Account_Plan_Objective__c/fields/OutcomePick__c.field-meta.xml
<CustomField>
    <fullName>OutcomePick__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Achieved</fullName>
            </value>
            <value>
                <fullName>Partially Achieved</fullName>
            </value>
            <value>
                <fullName>Fully Achieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>