force-app/main/default/objects/Account_Plan_Objective__c/fields/OwnerRef__c.field-meta.xml
<CustomField>
    <fullName>OwnerRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>