force-app/main/default/objects/Account_Plan_Objective__c/fields/OwnerReviewComments__c.field-meta.xml
<CustomField>
    <fullName>OwnerReviewComments__c</fullName>
    <label>Owner Review Comments</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>