force-app/main/default/objects/Account_Plan_Objective__c/recordTypes/HeijmansStandardObjectiveRecordType.recordType-meta.xml
<RecordType>
    <fullName>HeijmansStandardObjectiveRecordType</fullName>
    <active>true</active>
    <label>Standard Objective</label>
</RecordType>