force-app/main/default/objects/Account_Plan_Objective__c/recordTypes/HeijmansThemedObjectiveRecordType.recordType-meta.xml
<RecordType>
    <fullName>HeijmansThemedObjectiveRecordType</fullName>
    <active>true</active>
    <label>Themed Objective</label>
</RecordType>